tasks adjustment